fix(styles): fix speaker image not centering on smaller screens

--- a/src/styles/delorean.scss
+++ b/src/styles/delorean.scss
@@ -78,6 +78,7 @@
 
 .section.team-section .avatar,
 .author-box .avatar {
+  margin: 0 auto;
   max-width: 200px;
   height: auto;
   position: relative;
